--- a/src/pages/Contact/index.scss
+++ b/src/pages/Contact/index.scss
@@ -1,4 +1,19 @@
 .contact-page {
+  @media screen and (min-width: 991px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .contact-page-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    @media screen and (min-width: 991px) {
+      width: 50%;
+    }
+  }
+
   .text-zone {
     h1 {
       font-size: 53px;
@@ -20,34 +35,17 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
+
     .contact-form {
       margin-top: 20px;
-
+      width: 100%;
       ul {
         list-style: none;
+        width: 100%;
         li {
-          margin-bottom: 10px;
-          overflow: hidden;
-          display: block;
+          margin-bottom: 15px;
         }
-
-        li.half {
-          width: 49%;
-          margin-left: 2%;
-          float: left;
-          clear: none;
-
-          @media screen and (max-width: 768px) {
-            width: 100%;
-            float: none;
-            margin-left: 0;
-          }
-
-          &:first-child {
-            margin-left: 0;
-          }
-        }
-
         input[type='text'],
         input[type='email'] {
           width: 100%;
@@ -81,5 +79,13 @@
         }
       }
     }
+  }
+}
+
+.map-info {
+  height: 700px;
+  padding: 10px;
+  @media screen and (min-width: 991px) {
+    width: 50%;
   }
 }
